--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,26 @@
+@font-face {
+  font-family: 'OCRAStdRegular';
+  src: url('fonts/ocrastd-webfont.eot');
+  src: url('fonts/ocrastd-webfont.eot?#iefix') format('embedded-opentype'),
+       url('fonts/ocrastd-webfont.woff') format('woff'),
+       url('fonts/ocrastd-webfont.ttf') format('truetype'),
+       url('fonts/ocrastd-webfont.svg#OCRAStdRegular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   width: 480px;
   margin: 20px auto;
   background: #111;
+  color: #fff;
+}
+
+h1 {
+  font: 22px/22px 'OCRAStdRegular','Arial',sans-serif;
+  font-weight: normal;
+  text-transform: uppercase;
+  text-align: center;
 }
 
 #game {
